<?xml version="1.0"?>
<package format="2">
  <name>fortyfive_robot</name>
  <version>1.2.3</version>
  <description>
    ROS packages for the Fortyfive_robot (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="chc@robotis.com">HanCheol Cho</author>
  <author>Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/fortyfive_robot</url>
  <url type="emanual">http://fortyfive_robot.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/fortyfive_robot</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/fortyfive_robot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fortyfive_robot_bringup</exec_depend>
  <exec_depend>fortyfive_robot_description</exec_depend>
  <exec_depend>fortyfive_robot_example</exec_depend>
  <exec_depend>fortyfive_robot_navigation</exec_depend>
  <exec_depend>fortyfive_robot_slam</exec_depend>
  <exec_depend>fortyfive_robot_teleop</exec_depend>
  <export><metapackage/></export>
</package>
